Clean up warnings, fix broken tests, also cleaned up un-printable characters from J1939DA csv files.